[package]
name = "rendezvous_hash"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "An implementation of Rendezvous hashing algorithm"
documentation = "https://docs.rs/rendezvous_hash"
homepage = "https://github.com/sile/rendezvous_hash"
repository = "https://github.com/sile/rendezvous_hash"
readme = "README.md"
keywords = ["distributed", "hash"]
license = "MIT"

[dependencies]
siphasher = "0.1"

[dev-dependencies]
clap = "2.20"
