[package]
name = "rendezvous_hash"
version = "0.3.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "An implementation of Rendezvous hashing algorithm"
homepage = "https://github.com/sile/rendezvous_hash"
repository = "https://github.com/sile/rendezvous_hash"
readme = "README.md"
keywords = ["distributed", "hash"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/rendezvous_hash"}
codecov = {repository = "sile/rendezvous_hash"}

[dependencies]

[dev-dependencies]
clap = "2"
